--- a/style.css
+++ b/style.css
@@ -30,12 +30,10 @@ body{
     align-items: center;
     color: white;
     font-weight: 600;
-}
-.left{
-    width: 450px;
+    gap: 20px;
 }
 h1{
-    font-size: 90px;
+    font-size: 80px;
 }
 .button{
     border: 1px solid white;
@@ -57,6 +55,7 @@ h1{
     background-color: antiquewhite;
     border-radius: 10px;
     background-size: cover;
+    background-position: center;
     padding: 10px 20px;
 }
 .right p{
@@ -78,17 +77,44 @@ h1{
 @media screen and (min-width:500px) and (max-width:900px){
     .container{
         flex-direction: column;
+        width: 100%;
+        padding: 10px;
+    }
+    .box{
+        background-size: cover;
+        background-position: center;
+    }
+    .left{
+        width: 630px;
     }
     .right{
-        grid-template-columns: 500px;
+        grid-template-columns: 450px;
     }
 }
 @media screen and (min-width:250px) and (max-width:500px){
     .container{
         flex-direction: column;
+        width: 100%;
+        padding: 10px;
+    }
+    .navbar{
+        gap: 20px;
+        /* margin-left: 80px; */
+    }
+    .nav-menu li{
+        margin: 0px;
+        display: block;
+    }
+    .left{
+        margin-bottom: 40px;
     }
     .right{
         grid-template-columns: 200px;
+        left: 30px;
+    }
+    .left h1{
+        font-size: 60px;
+        /* padding: 20px; */
     }
 }
 .box:hover{
